--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <script src='/implementations/rsvp-2.0.4.js'></script>
 <script src='/implementations/bluebird.js'></script>
 <script src='/implementations/when.js'></script>
+<script src='/node_modules/lodash/lodash.js'></script>
 <script src='/node_modules/benchmark/benchmark.js'></script>
 
 <script>
