prefer AMD build of RSVP

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script src='/vendor/loader.js'></script>
-<script src='/implementations/rsvp-2.0.4.js'></script>
+<script src='/implementations/rsvp-2.0.4.amd.js'></script>
 <script src='/implementations/bluebird.js'></script>
 <script src='/implementations/when.js'></script>
 <script src='/node_modules/lodash/lodash.js'></script>
@@ -8,10 +8,6 @@
 <script>
   define('benchmark', [], function(){
     return Benchmark;
-  });
-
-  define('rsvp', [], function(){
-    return RSVP;
   });
 </script>
 
