--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <script src='/vendor/loader.js'></script>
-<script src='/implementations/rsvp-2.0.4.amd.js'></script>
+<script src='/implementations/rsvp-2.0.4/dist/rsvp-2.0.4.amd.js'></script>
+<script src='/implementations/rsvp/dist/rsvp-2.0.4.amd.js'></script>
 <script src='/implementations/bluebird.js'></script>
 <script src='/implementations/when.js'></script>
 <script src='/node_modules/lodash/lodash.js'></script>
