--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <script>
   define('benchmark', [], function(){
-    return Benchmark;
+    return {
+      default: Benchmark
+    };
   });
 </script>
 
