Move all config code to config dir and create a clear droppable directory for tests along with not calling tests suites which creates confusion with benchmark suites. This sets up to easily allow developers to drop in tests and hand pick the ones to run both through command line and UI

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	define('glob', [], function(){
 		return {
 			sync: function() {
-				return	Object.keys(requirejs._eak_seen).filter(function(name){
-					return /micro/.test(name);
+				return Object.keys(requirejs._eak_seen).filter(function(name){
+					return /^tests/.test(name);
 				});
 			}
 		};
