Move all config code to config dir and create a clear droppable directory for tests along with not calling tests suites which creates confusion with benchmark suites

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		return {
 			sync: function() {
 				return	Object.keys(requirejs._eak_seen).filter(function(name){
-					return /micro/.test(name);
+					return /^tests/.test(name);
 				});
 			}
 		};
