--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <script src='/implementations/rsvp-2.0.4/dist/rsvp-2.0.4.amd.js'></script>
 <script src='/implementations/rsvp-3.0.0/dist/rsvp-3.0.0.amd.js'></script>
 <script src='/implementations/rsvp-3.0.6/dist/rsvp-3.0.6.amd.js'></script>
-<!-- <script src='/implementations/rsvp/dist/rsvp-3.0.6.amd.js'></script> -->
+<script src='/implementations/lie.js'></script>
+<script src='/implementations/rsvp/dist/rsvp-3.0.7.amd.js'></script>
 <script src='/implementations/bluebird.js'></script>
 <script src='/implementations/when.js'></script>
 <script src='/implementations/q.js'></script>
